Bug 327125 - muon-updater never finishes updating packages
Summary: muon-updater never finishes updating packages
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 326174 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-04 12:26 UTC by Rohan Garg
Modified: 2016-03-02 13:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2013-11-04 12:26:50 UTC
Once muon-updater is done with updating packages it does not quit and instead shows that it's updating package lists ( which keeps going on forever ).

Reproducible: Always

Steps to Reproduce:
1. Update packages via muon-updater
2. Wait for it to finish updating
3.
Actual Results:  
Updater never finishes

Expected Results:  
Updater finishes

This is on the 2.1 stable git branch
Comment 1 Aleix Pol 2013-11-04 17:47:24 UTC
Git commit e50f11523427a9381e7bc6e2a56befbb6ebc64f0 by Aleix Pol.
Committed on 04/11/2013 at 17:47.
Pushed by apol into branch '2.1'.

Make sure updates report that they're done

M  +1    -0    libmuon/backends/ApplicationBackend/ApplicationUpdates.cpp

http://commits.kde.org/muon/e50f11523427a9381e7bc6e2a56befbb6ebc64f0
Comment 2 Rohan Garg 2013-11-05 16:22:50 UTC
Fix does not work for me, the UI gets stuck on "Loading Software List" now.
Comment 3 Jonathan Riddell 2013-11-05 16:24:55 UTC
I have the same as Rohan, it sometimes gets stuck on Loading Software List when you run Install Updates and is unreponsive to any action.  The upgrade does acutally happen but this is not reflected in the UI.
http://starsky.19inch.net/~jr/tmp/muon.png
Comment 4 Aleix Pol 2013-11-06 15:25:05 UTC
It's working for me, I cannot reproduce... I'll need a bit of help :/
Comment 5 Rohan Garg 2013-11-08 17:01:28 UTC
> Git commit 4dbf96a260bc6094d30d5328d3f0204d4d8bbea0 by Rohan Garg.
> Committed on 08/11/2013 at 16:58.
> Pushed by garg into branch '2.1'.
>
> Set the progress to 100% once the transaction finishes
> Reviewed-By: Aleix Pol <aleixpol@kde.org>
>
> M  +10   -3    libmuon/backends/ApplicationBackend/ApplicationUpdates.cpp
> M  +1    -0    libmuon/backends/ApplicationBackend/ApplicationUpdates.h
>
> http://commits.kde.org/muon/4dbf96a260bc6094d30d5328d3f0204d4d8bbea0
Comment 6 Jonathan Riddell 2013-11-11 15:31:41 UTC
*** Bug 326174 has been marked as a duplicate of this bug. ***