Make sure updates report that they're done

BUG: 327125